# mmorch

./: .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  ALGORITHMS-MAP.md  AUDIT_2026-06-07.md  CLAUDE.md  GOAL.hash  GOAL.md  HANDOFF.md  HERMES-IDEAS.md  INNOVATION_ROADMAP_2026-06-07.md  README.md  SELF-EVOLUTION-PLAN.md  SETUP-HOST.md  WEIGHTS.md  ablation_adversarial.py  ablation_paired.py  ablation_prompt.py  ablation_run.py  ablation_selfverify.py  ablation_symmetric.py  build_dataset_repos.py  eval_headroom.py  eval_headroom_wsl.py  mcp_server.py  prices.json  pyproject.toml  smoke_test.py
.beads/: issues.jsonl  metadata.json
.beads/hooks/: pre-commit  pre-push
.githooks/: pre-commit
brainstorms/: 2026-06-08-mmorch-ideal-vision.md
docs/: coding-principles.md  cooperative-workflow.md  intuition-layer.md  paperclip-grafts.md  sandbox-executor.md
docs/superpowers/plans/: 2026-06-18-mmorch-session-learning.md
docs/superpowers/specs/: 2026-06-18-mmorch-session-learning-design.md
flywheel/: RESULTS.md  baseline.py  code_embedder.npz  code_embedder_vocab.json  eval_functional.py  eval_variants.py  export_numpy.py  oracle_dataset.py  oracle_diverse.py  oracle_eval.py  quantize.py  relabel_radon.py  simclr.py  simclr_functional.py  simclr_moco.py
mmorch/: __init__.py  ablation.py  autoresearch.py  bucketrank.py  budget.py  budget_policy.py  cache.py  cascade.py  chat_store.py  checkers.py  classify.py  claude_exec.py  code_embedder.py  code_loop.py  code_review.py  config.py  context_blocks.py  cost.py  curiosity.py  dataset.py  docgen.py  durable_runs.py  effort.py  enrich.py  ensemble.py  events.py  evolve.py  exec_embedder.py  exec_policy.py  factory.py  feedback.py  feedback_trace.py  fleet.py  gate_policy.py  goal.py  hillclimb.py  innovate.py  intuition.py  job_graph.py  learn.py  (+51 more)
plugins/example/: main.py  plugin.json
roles/: architect.md  coder.md  reviewer.md
scripts/: ab_hot_clarification.py  ab_intuition_router.py  autopull.cmd  autoregister_project.py  register-autopull.ps1  session_ingest_hook.py
tests/: test_ablation.py  test_autoresearch.py  test_b2_b3.py  test_bucketrank.py  test_budget.py  test_cache_cost.py  test_cascade_bandit.py  test_checkers.py  test_classify.py  test_code_loop.py  test_config_cost.py  test_cost_savers.py  test_curiosity.py  test_cynefin.py  test_dataset.py  test_docgen.py  test_enrich.py  test_error_rates.py  test_evolve.py  test_evolve_branch.py  test_evolve_goal_guard.py  test_evolve_motor.py  test_exec_embedder.py  test_factory.py  test_feedback.py  test_fleet.py  test_glm_family.py  test_goal.py  test_hillclimb.py  test_innov_modules.py  test_learn.py  test_loop.py  test_megasource.py  test_memory.py  test_multiview.py  test_nodes.py  test_nudge.py  test_patterns.py  test_predict.py  test_project_aware.py  (+25 more)
vault/: README.md
vault/.obsidian/: graph.json  workspace.json
vault/research/: ablation-18.4-cross-family-FINDINGS.md  ablation-18.4-cross-family-INCONCLUSIVE.md  darwin-godel-machine-self-improving-agents.md  frugalgpt-cascade-y-model-routing.md  llm-as-jury-ensemble-y-errores-correlacionados.md  moc-autolearning.md
vault/templates/: research-note.md
weights/: manifest.json
workflows/: build-feature.workflow.json
