[project]
name = "mmorch"
version = "1.2.0"
description = "Deterministic multi-model orchestration that conserves Claude plan quota via cheap external models"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
dependencies = [
    "openai>=1.40.0",
    "python-dotenv>=1.0.0",
    "duckdb>=1.0.0",
    "numpy>=1.26.0",
]

[project.optional-dependencies]
mcp = ["mcp>=1.2.0"]
memory = ["fastembed>=0.3.0"]   # embeddings locales (bge-small). Sin esto: recall coarse-only.
checkers = ["sqlglot>=20", "pint>=0.23", "sympy>=1.12", "radon>=6.0", "coverage>=7.0"]
server = ["starlette>=0.37", "uvicorn>=0.27", "httpx>=0.27"]   # nivel 3: live server + fleet
factory = ["scikit-learn>=1.4"]                                 # fabrica de modelos (logreg/GBRT)
# todo lo necesario pa un host always-on (deploy multi-host): pip install mmorch[host]
host = ["mmorch[mcp,memory,checkers,server,factory]"]

[project.scripts]
mmorch-server = "mmorch.server:main"
mmorch-sync = "mmorch.sync:_cli"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["mmorch"]

[tool.setuptools.package-data]
# pesos del nodo neuronal + vocab + datos viajan con el paquete (deploy sin re-entrenar)
mmorch = ["py.typed"]

[tool.setuptools.exclude-package-data]
mmorch = []
