[project]
name = "mmorch"
version = "1.2.0"
description = "Deterministic multi-model orchestration that conserves Claude plan quota via cheap external models"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
dependencies = [
    "openai>=1.40.0",
    "python-dotenv>=1.0.0",
    "duckdb>=1.0.0",
    "numpy>=1.26.0",
]

[project.optional-dependencies]
mcp = ["mcp>=1.2.0"]
memory = ["fastembed>=0.3.0"]   # embeddings locales (bge-small). Sin esto: recall coarse-only.
checkers = ["sqlglot>=20", "pint>=0.23", "sympy>=1.12", "radon>=6.0", "coverage>=7.0"]
server = ["starlette>=0.37", "uvicorn>=0.27", "httpx>=0.27",
          "pywinpty>=2.0; platform_system=='Windows'"]          # nivel 3: live server + fleet + PTY (ConPTY)
factory = ["scikit-learn>=1.4"]                                 # fabrica de modelos (logreg/GBRT)
# todo lo necesario pa un host always-on (deploy multi-host): pip install mmorch[host]
host = ["mmorch[mcp,memory,checkers,server,factory]"]
dev = ["ruff>=0.15", "mypy>=1.10"]                              # lint gate (ruff) + type checker (mypy, advisory)

[project.scripts]
mmorch-server = "mmorch.server:main"
mmorch-sync = "mmorch.sync:_cli"

[tool.ruff]
target-version = "py312"
line-length = 110

[tool.ruff.lint]
# Bug-catching gate, NOT a style flood (keep signal high): pyflakes (F = undefined names / unused —
# the exact class that bit the server refactor), syntax errors (E9), bugbear (B = real bug patterns:
# mutable default args, etc.), pylint errors (PLE). Deliberately NOT line-length or style nits.
select = ["F", "E9", "B", "PLE"]
[tool.ruff.lint.per-file-ignores]
# __main__ self-checks intentionally use `assert False` to prove a guard fires.
"mmorch/*.py" = ["B011"]
"tests/*.py" = ["B011"]

[tool.mypy]
# ENFORCED gate: the ratchet is done — 71 cold errors driven to 0 (a real bug found + fixed:
# Predictor.by_mp was annotated dict[tuple, list] but holds dicts). Keep it at 0.
# Run: mypy mmorch --ignore-missing-imports
python_version = "3.12"
ignore_missing_imports = true       # 3rd-party libs without stubs (litellm, fastembed, ...) = noise, not bugs

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["mmorch"]

[tool.setuptools.package-data]
# pesos del nodo neuronal + vocab + datos viajan con el paquete (deploy sin re-entrenar)
mmorch = ["py.typed"]

[tool.setuptools.exclude-package-data]
mmorch = []
